[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"
homepage = "https://github.com/martial-plains/advent-of-code"
license = "MIT"
repository = "https://github.com/martial-plains/advent-of-code"
version = "2023.0.0"

[workspace.dependencies]
algoritmer = { git = "https://github.com/martial-plains/algoritmer", branch = "main" }
anyhow = "1.0.86"
arrayvec = "0.7.6"
clap = "4.5.16"
hashbrown = "0.14.5"
itertools = "0.13.0"
log = "0.4.22"
md-5 = "0.10.6"
num = "0.4.3"
permutohedron = "0.2.4"
primal = "0.3.3"
rayon = "1.10.0"
regex = "1.10.6"
serde_json = "1.0.125"
sscanf = "0.4.2"
