[package]
name = "advent-of-code"
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Solutions to Advent of Code"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code"]
license.workspace = true
readme = "README.md"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
algorithms = { workspace = true }
anyhow = { workspace = true }
arrayvec = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
md-5 = { workspace = true }
num = { workspace = true }
permutohedron = { workspace = true }
primal = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
sscanf = { workspace = true }
